# auto_EACSF

./: .gitignore  CMakeLists.txt  LICENSE  README.md  SuperBuild.cmake  auto_EACSF.cmake  default_config.json
CMake/: Auto_EACSFConfig.cmake.in
SuperBuild/: External_ABC.cmake  External_ANTS.cmake  External_ANTs.cmake  External_BRAINSTools.cmake  External_ITKv4.cmake  External_Qt5.cmake  External_SlicerExecutionModel.cmake  External_VTK.cmake  External_niral_utilities.cmake
Testing/: CMakeLists.txt
src/: Auto_EACSF.xml  CMakeLists.txt  csfwindow.cxx  default_config.json  make_mask.py  rigid_align.py  surfacecorrespondance.cpp  surfacecorrespondance.h  vent_mask.py  vtkio.h
src/app/: AutoEACSF_Resources.qrc  Auto_EACSF.cxx  Auto_EACSF.xml  CMakeLists.txt  Vent_CSF-BIN-RAI-Fusion.nrrd  coronal_mask_70.nrrd  csfscripts.cxx  csfscripts.h  csfwindow.cxx  csfwindow.h  csfwindow.ui  default_config.json  exebox.cxx  exebox.h  extexecutableswidget.cxx  extexecutableswidget.h  main_script.py  make_mask.py  parameters.cxx  parameters.h  rigid_align.py  skull_strip.py  tissue_seg.py  vent_mask.py  worker.h
src/computeCSFdensitylib/: CMakeLists.txt  boundarycheck.cxx  boundarycheck.h  computecsfdensity.cxx  computecsfdensity.h  computecsfdensity.xml  edge.cxx  edge.h  gridcreate.cxx  gridcreate.h  laplacegrid.cxx  laplacegrid.h  surfacecorrespondence.cxx  surfacecorrespondence.h  vtkio.cxx
src/klaplacelib/: CMakeLists.txt  boundarycheck.cxx  boundarycheck.h  computecsfdensity.cxx  computecsfdensity.h  geometry.cxx  geometry.h  gridcreate.cxx  gridcreate.h  klaplace.cxx  laplacegrid.cxx  laplacegrid.h  surfacecorrespondence.cxx  surfacecorrespondence.h  vtkio.cxx  vtkio.h
